fixed press quotes on small screen

--- a/scss/site.scss
+++ b/scss/site.scss
@@ -84,8 +84,14 @@ body {
   
   blockquote {
     background-color:rgba(255, 255, 255, 0.1);
+    margin-left:20%;
+    margin-right:20%;
     footer {
       color:white;
+    }
+    @media (max-width:992px) {
+      margin-left:0;
+      margin-right:0;
     }
   }
 }
